# galaxy

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml
configured_files/: config.hpp.in
fuzz_test/: fuzz_tester.cpp
src/: CMakeLists.txt  game_ui.cpp  game_ui.hpp  main.cpp
test/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  tests.cpp
